--- a/index.html
+++ b/index.html
@@ -1,17 +1,31 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <header>
-        <h1>LOGO</h1>
-        <nav>
-            <ul>
-                <button>Sign Up</button>
-            </ul>
-        </nav>
+
+<body class="body">
+    <header class="header">
+        <div class="header-container">
+            <nav class="nav">
+                <h1 class="logo">LOGO</h1>
+                <ul>
+                    <li><a href="#"><button class="button">Sign Up</button></a></li>
+                </ul>
+            </nav>
+            <div class="header-content">
+                <h1 class="header-title">Cool Dark UI Template for <br> Webflow Agencies!</h1>
+                <button class="button">Stay Focused</button>
+            </div>
+        </div>
     </header>
 </body>
+
 </html>
