--- a/index.html
+++ b/index.html
@@ -26,6 +26,36 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="section">
+            <div>
+                <h1 class="section-title">See It in Action</h1>
+                <p class="section-description">Explore the live preview and imagine your brand in this bold new look.
+                </p>
+                <button class="button">Launch Live Preview</button>
+            </div>
+            <img class="wcmini" src="Assets/wc-mini.png" alt="">
+        </section>
+        <section class="box">
+            <div>
+                <h1 class="joined header-title">Joined Thousands of Productive Users</h1>
+                <div class="stats">
+                    <div>
+                        <h1 class="stat-number">50K</h1>
+                        <p class="stat-description">Active Users</p>
+                    </div>
+                    <div>
+                        <h1 class="stat-number">2M+</h1>
+                        <p class="stat-description">Focus Sessions</p>
+                    </div>
+                    <div>
+                        <h1 class="stat-number">95%</h1>
+                        <p class="stat-description">Satisfaction Rate</p>
+                    </div>
+            </div>
+        </section>
+
+    </main>
 </body>
 
 </html>
