added new review section

--- a/index.html
+++ b/index.html
@@ -52,6 +52,81 @@
                         <h1 class="stat-number">95%</h1>
                         <p class="stat-description">Satisfaction Rate</p>
                     </div>
+                </div>
+        </section>
+        <section>
+            <div>
+                <h1 class="joined header-title">What Our Users Say</h1>
+            </div>
+            <div class="review">
+                <div class="reviewer">
+                    <div>
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                    </div>
+                    <div>
+                        <h3>Loved by Designers</h3>
+                        <p>This template instantly leveled up our presence."-Studio Vertex</p>
+
+                    </div>
+                    <div>
+                        <div>
+                            <img src="Assets/avatar.png" alt="">
+                        </div>
+                        <div>
+                            <h4>Review</h4>
+                            <p>Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="reviewer">
+                    <div>
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                    </div>
+                    <div>
+                        <h3>Loved by Designers</h3>
+                        <p>This template instantly leveled up our presence."-Studio Vertex</p>
+
+                    </div>
+                    <div>
+                        <div>
+                            <img src="Assets/avatar.png" alt="">
+                        </div>
+                        <div>
+                            <h4>Review</h4>
+                            <p>Date</p>
+                        </div>
+                    </div>
+                </div><div class="reviewer">
+                    <div>
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                    </div>
+                    <div>
+                        <h3>Loved by Designers</h3>
+                        <p>This template instantly leveled up our presence."-Studio Vertex</p>
+
+                    </div>
+                    <div>
+                        <div>
+                            <img src="Assets/avatar.png" alt="">
+                        </div>
+                        <div>
+                            <h4>Review</h4>
+                            <p>Date</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
