added another section

--- a/index.html
+++ b/index.html
@@ -129,6 +129,15 @@
                 </div>
             </div>
         </section>
+        <section class="header-content">
+            <div>
+                <h1 class="joined header-title">Ready to focus better</h1>
+                <p class="pera">This template instantly leveled up our presence.” – Studio Vertex</p>
+                <button class="button">Get Started Free</button>
+                
+            </div>
+            <img class="wc-big" src="Assets/wc-big.png" alt="">
+        </section>
 
     </main>
 </body>
