--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
                             <p>Date</p>
                         </div>
                     </div>
-                </div><div class="reviewer">
+                </div>
+                <div class="reviewer">
                     <div>
                         <img src="Assets/icon-star.png" alt="">
                         <img src="Assets/icon-star.png" alt="">
@@ -134,12 +135,39 @@
                 <h1 class="joined header-title">Ready to focus better</h1>
                 <p class="pera">This template instantly leveled up our presence.” – Studio Vertex</p>
                 <button class="button">Get Started Free</button>
-                
+
             </div>
             <img class="wc-big" src="Assets/wc-big.png" alt="">
         </section>
-
+        <section>
+            <div class="section">
+                <div class="touch">
+                    <h1 class="header-title let">Let's Get in Touch</h1>
+                </div>
+                <div>
+                    <label for="email">Email</label>
+                    <input type="text" id="email" placeholder="Enter your email">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" placeholder="Enter your name">
+                    <label for="message">Message</label>
+                    <textarea id="message" placeholder="Write your message..."></textarea>
+                    <input type="submit" value="Get in Touch" class="button">
+                </div>
+        </section>
     </main>
+    <footer>
+        <h1>LOGO</h1>
+        <p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+        <div>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">How it Works</a></li>
+                <li><a href="#">Services</a></li>
+            </ul>
+        </div>
+
+    </footer>
 </body>
 
 </html>
