finally done assignment

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title>   
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
@@ -144,26 +144,26 @@
                 <div class="touch">
                     <h1 class="header-title let">Let's Get in Touch</h1>
                 </div>
-                <div>
-                    <label for="email">Email</label>
-                    <input type="text" id="email" placeholder="Enter your email">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" placeholder="Enter your name">
-                    <label for="message">Message</label>
-                    <textarea id="message" placeholder="Write your message..."></textarea>
+                <div class="gap">
+                    <label class="email" for="email">Email</label>
+                    <input class="gettouch" type="text" id="email" placeholder="Enter your email">
+                    <label class="email" for="name">Name</label>
+                    <input class="gettouch" type="text" id="name" placeholder="Enter your name">
+                    <label class="email" for="message">Message</label>
+                    <textarea class="massage-box" id="message" placeholder="Write your message..."></textarea>
                     <input type="submit" value="Get in Touch" class="button">
                 </div>
         </section>
     </main>
-    <footer>
-        <h1>LOGO</h1>
-        <p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+    <footer class="footer">
+        <h1 class="logo footer-logo">LOGO</h1>
+        <p class="pera">Ready to elevate your online presence? Contact us today to discuss<br> your project and discover how we can bring your vision to life.</p>
         <div>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">How it Works</a></li>
-                <li><a href="#">Services</a></li>
+            <ul class="footer-class">
+                <li><a class="textdec" href="#">Home</a></li>
+                <li><a class="textdec" href="#">About</a></li>
+                <li><a class="textdec" href="#">How it Works</a></li>
+                <li><a class="textdec" href="#">Services</a></li>
             </ul>
         </div>
 
